--- a/exercicios/desafio10/estilos/style.css
+++ b/exercicios/desafio10/estilos/style.css
@@ -110,7 +110,7 @@ header > p {
     padding-left: 10px;
     margin: auto;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.514);
-    margin-bottom: 20px;
+    padding-bottom: 50px;
 
 }
 
